--- a/css/estilo.css
+++ b/css/estilo.css
@@ -35,26 +35,77 @@
     color: white;
     text-decoration: none;
     font-weight: bold;
+    transition: color 0.3s ease;
   }
   
   nav ul li a:hover {
-    text-decoration: underline;
+    color: #ffcc00;
   }
   
   /* Main */
   main {
+    background: white;
     flex: 1;
     padding: 20px;
+    margin: 20px;
+    border-radius: 8px;
     text-align: center;
+    box-shadow: 0 4px 8px #e0f804ba(193, 27, 27, 0.1);
+
   }
   
   /* Footer */
   footer {
+    margin-top: auto;
     background-color: #333;
     color: white;
     padding: 10px;
     text-align: center;
   }
+  /* Sección de proyectos */
+.proyectos {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
+  }
+  
+  /* Tarjetas de proyectos */
+  .tarjeta-proyecto {
+    background-color:#f9da61;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    width: 300px;
+    padding: 15px;
+    text-align: center;
+    transition: transform 0.3s;
+  }
+  
+  .tarjeta-proyecto img {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+  }
+  
+  /* Efecto hover en tarjetas */
+  .tarjeta-proyecto:hover {
+    transform: scale(1.05);
+  }
+  .enlace {
+    color: blue;           /* Color del texto */
+    text-decoration: none; /* Quitar el subrayado */
+    font-weight: bold;     /* Poner el texto en negritas */
+    font-size: 18px;       /* Tamaño de la letra */
+    transition: color 0.3s ease; /* Transición suave de color */
+  }
+  
+  /* Estilo cuando pasas el mouse encima */
+  .enlace:hover {
+    color: darkblue;       /* Cambia a azul oscuro al pasar el mouse */
+    text-decoration: underline; /* Aparece el subrayado al pasar el mouse */
+  }
+  
   @media (max-width: 768px) {
     nav ul {
       flex-direction: column;
